corrigido width da section com a class box-contact

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -282,7 +282,7 @@
 
 .box-contact {
 	background-image: url('../img/fundo_contato.jpg');
-	width: 100vw;
+	width: 100%;
     height: 90vh;
     display: flex;
 	align-items: center;
