--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,9 @@
 
 .conteiner-menu {
 	width: 100%;
-	height: 100%;
-	height: 1.63vh;
+	height: 1.82vh;
 	background-image: url('../img/topo.svg');
+	background-repeat-y: no-repeat;
 }
 
 .conteiner-foto {
@@ -19,8 +19,7 @@
 }
 
 .logo-principal {
-	width: 44vw;
-	height: 15vh;
+	width: 50%;
 	display: flex;
 	align-self: center;
 }
@@ -34,15 +33,15 @@
 
 .box-menu {
 	width: 95%;
-    height: 30vh;
+    height: 36vh;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-around;
 }
 
 .logo-menu {
-	width: 9vw;
-    height: 3vh;
+	width: 11vw;
+    height: 5vh;
 }
 
 .lista-menu {
@@ -64,15 +63,14 @@
 
 .box-inicio {
 	width: 100%;
-    height: 150vh;
+    height: 170vh;
     display: flex;
     align-items: center;
     flex-direction: column;
-    justify-content: space-around;
     background: linear-gradient(to top, rgba(255,255,255,0), rgba(255,255,255,1)), url('../img/fundo.png');
-   background-size: 300vw 60vh;
+   	background-size: 300vw 62vh;
     background-repeat: no-repeat;
-    background-position: top;
+    background-position: top right;
 }
 
 .box-conteudo {
@@ -85,7 +83,7 @@
 
 .box-images {
 	width: 100%;
-	height: 105vh;
+	height: 130vh;
 	display: flex;
 	flex-direction: column;
     align-items: center;
@@ -100,27 +98,15 @@
 	color: #000000;
 }
 
-.foto-apresentação {
+.foto-apresentação, .foto-meio, .foto-final {
 	width: 94vw;
-	height: 33vh;
-	border-radius: 2em;
-}
-
-.foto-meio {
-	width: 94vw;
-	height: 33vh;
-	border-radius: 2em;
-}
-
-.foto-final {
-	width: 94vw;
-	height: 33vh;
+	height: 42vh;
 	border-radius: 2em;
 }
 
 .conteiner-icones {
 	width: 100%;
-	height:	126vh;
+	height:	128vh;
 	display: flex;
 	align-items: center;
 	flex-direction: column;
@@ -179,7 +165,7 @@
 
 .box-impacto {
 	width: 100%;
-	height:	66vh;
+	height:	78vh;
 	background-image: url('../img/fundo_impacto.jpg');
 	display: flex;
 	align-items: center;
@@ -209,7 +195,7 @@
 
 .conteiner-image {
 	width: 94vw;
-	height: 35vh;
+	height: 44vh;
 	background-color: #FFFFFF;
 	border-radius: 2em;
 	box-shadow: 0em 0.2em 0.5em #A9A9A9;
@@ -220,7 +206,7 @@
 
 .foto-impacto {
 	width: 87vw;
-	height: 31.6vh;
+	height: 40.6vh;
 	border-radius: 1.6em;
 }
 
@@ -324,7 +310,7 @@
 .box-contact {
 	background-image: url('../img/fundo_contato.jpg');
 	width: 100%;
-    height: 87vh;
+    height: 92vh;
     display: flex;
 	align-items: center;
 	flex-direction: column;
@@ -333,7 +319,7 @@
 
 .conteiner-photography {
 	width: 94vw;
-	height: 37vh;
+	height: 44vh;
 	background-color: #FFFFFF;
 	border-radius: 2em;
 	box-shadow: 0em 0.2em 0.5em #A9A9A9;
@@ -344,7 +330,7 @@
 
 .photography {
 	width: 87vw;
-	height: 33.6vh;
+	height: 40.6vh;
 	border-radius: 1.6em;
 }
 
@@ -435,8 +421,7 @@
 	}
 
 	.logo-principal {
-   
-    	height: auto;
+   		width: 35%;
 	}
 
 	.texto-apresentação {
@@ -459,29 +444,29 @@
 	}
 
 	.box-inicio {
-		height: 132vh;
+		height: 110vh;
 		flex-direction: row;
     	flex-wrap: wrap;
-    	background-position-x: right;
+    	background-size: 274vw 60vh;
 	}
 
 	.box-conteudo {
-		height: 50vh;
+		height: 20vh;
 	}
 
 	.conteiner-navegação {
 		width: 100%;
-		height: 56vh;
+		height: 40vh;
 	}
 
 	.lista-menu {
-		height: 32%;
+		height: 38%;
 		padding-left: 2rem;
 	}
 
 	.box-menu {
 		width: 90%;
-		height: 30vh;
+		height: 40vh;
 	}
 
 	.conteiner-icones {
@@ -694,6 +679,16 @@
 		position: fixed;
 	}
 
+	.box-menu {
+		height: 90%;
+    	display: flex;
+    	justify-content: flex-start;
+	}
+
+	.logo-principal {
+		width: 138%;
+	}
+
 	.logo-menu {
 		width: 0vw;
 	}
@@ -708,11 +703,11 @@
 	}
 
 	.box-inicio {
-		height: 75vh;
+		height: 90vh;
 		background-image: url(../img/fundo.png);
 		display: flex;
     	justify-content: flex-end;
-    	background-size: 100% 62vh;
+    	background-size: 100% 76vh;
 	}
 
 	.box-conteudo {
@@ -773,13 +768,15 @@
 	}
 
 	.box-impacto {
-		background-size: 77vw 44vh;
-    	background-position: top right;
-    	align-items: flex-end;
+		background-size: 76vw 55vh;
+    	height: 96vh;
+    	align-items: center;
+    	flex-direction: row;
+    	background-position: right;
 	}
 
 	.box-paragrafo {
-		width: 10vw;
+		width: 36vw;
 	}
 
 	.title-impact {
@@ -794,16 +791,17 @@
     	height: 32vh;
     	font-size: 1.3em;
     	align-items: flex-start;
+    	line-height: 1.6em;
 	}
 
 	.conteiner-image {
-		width: 31vw;
-		height: 36vh;
+		width: 36vw;
+		height: 46vh;
 	}
 
 	.foto-impacto {
-		width: 31vw;
-    	height: 37vh;
+		width: 36vw;
+    	height: 46vh;
     	padding: 0.75em;
     	border-radius: 2em;
 	}
