--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -752,7 +752,7 @@
 
 	.menu-social {
 		width: 75vw;
-    	height: 61vh;
+    	height: 76vh;
     	font-size: 1.28em;
 	}
 
@@ -768,11 +768,11 @@
 	}
 
 	.box-impacto {
-		background-size: 76vw 55vh;
-    	height: 96vh;
+		background-size: 76vw 49vh;
+    	height: 66vh;
     	align-items: center;
     	flex-direction: row;
-    	background-position: right;
+    	background-position: top right;
 	}
 
 	.box-paragrafo {
@@ -808,6 +808,7 @@
 
 	.box-parceria {
 		align-items: flex-end;
+		height: 94vh;
 	}
 
 	.title-friends {
