--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,8 @@
     	position: absolute;
     	line-height: 1.7;
     	margin-left: 3vw;
+    	border-radius: 0em 0em 0.9em;
+    	box-shadow: 0.1em 0.1em 0.2em #A9A9A9;
 	}
 
 	a {
